<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>

    <string name="network_error">Please check your internet connection.</string>
    <string name="article_image_description">Article image</string>

    <!-- For shared elements transition -->
    <string name="transition_thumbnail" translatable="false">transition_thumbnail</string>
    <string name="transition_title" translatable="false">transition_title</string>
    <string name="transition_subtitle" translatable="false">transition_subtitle</string>

</resources>
