<layout xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Widget.MaterialComponents.CardView"
        app:cardElevation="@dimen/card_elevation"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="@dimen/card_margin"
        android:foreground="?selectableItemBackground"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--suppress AndroidLintContentDescription -->
            <com.example.xyzreader.ui.DynamicHeightImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/photo_placeholder"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_thumbnail"/>

            <TextView
                android:id="@+id/article_title"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/article_padding"
                android:textColor="@color/ltgray"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="4"
                android:transitionName="@string/transition_title"/>

            <TextView
                android:id="@+id/article_subtitle"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/article_padding"
                android:textColor="#6000"
                android:maxLines="2"
                android:ellipsize="end"
                android:transitionName="@string/transition_subtitle"/>
        </LinearLayout>

    </android.support.design.card.MaterialCardView>
</layout>
