<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- read https://guides.codepath.com/android/Handling-Scrolls-with-CoordinatorLayout -->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/detail_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_margin"
            tools:targetApi="lollipop">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Design.CollapsingToolbar"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                app:toolbarId="@+id/toolbar">
                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_height="@dimen/detail_photo_height"
                    android:layout_width="match_parent"
                    android:contentDescription="@string/article_image_description"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:targetApi="lollipop"
                    android:transitionName="@string/transition_thumbnail" />
         <!--       <android.support.v7.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin" /> -->
            </android.support.design.widget.CollapsingToolbarLayout>

            <LinearLayout
                android:id="@+id/meta_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="@dimen/article_padding">
                <TextView
                    android:id="@+id/article_title"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:lineSpacingMultiplier="0.9"
                    android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                    android:textColor="#fff"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold"
                    android:transitionName="@string/transition_title"/>
                <TextView
                    android:id="@+id/article_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/textAppearanceSmall"
                    android:textColor="#8fff"
                    android:transitionName="@string/transition_subtitle"/>
            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:stateListAnimator="@animator/fab_state_list_anim"
            android:layout_margin="@dimen/fab_margin"
            app:fabSize="normal"
            android:elevation="@dimen/fab_elevation"
            android:contentDescription="@string/action_share"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:rippleColor="@color/ripple_fab"
            android:src="@drawable/ic_share"
            tools:targetApi="lollipop" />
        <!-- app:pressedTranslationZ="@dimen/fab_press_translation_z" -->

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/article_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:targetApi="lollipop">
                <TextView
                    android:id="@+id/article_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                    android:paddingBottom="@dimen/detail_body_bottom_margin"
                    style="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/theme_accent"
                    android:textSize="@dimen/detail_body_text_size"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>